--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,10 @@
 body {
     font-family: 'Rubik', sans-serif;
     background: rgb(243, 243, 243);
+    margin: 0;
+    padding: 0;
+}
+
+ul li {
+    display: inline-block;
 }
